Se agrego validación para EmailAddressValidator

--- a/jakartajpa/src/main/webapp/index.xhtml
+++ b/jakartajpa/src/main/webapp/index.xhtml
@@ -1,7 +1,9 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:h="http://xmlns.jcp.org/jsf/html">
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:f="http://xmlns.jcp.org/jsf/core"
+      xmlns:pt="http://xmlns.jcp.org/jsf/passthrough">
     <h:head>
         <title>ITESS-Patzcuaro JPA</title>
     </h:head>
@@ -15,23 +17,30 @@
               </h:outputLabel>
               <h:inputText id="firstName" 
                            label="First Name"
+                           pt:placeholder="Francisco"
                            value="#{student.firstName}"
                            required="true"
                            validator="#{alphaValidator.validateAlpha}">
+                  <f:validateLength minimum="3" maximum="30"/>
               </h:inputText>
               <h:outputLabel for="lastName" value="Last Name:">
               </h:outputLabel>
               <h:inputText id="lastName"
                            label="Last Name"
+                           pt:placeholder="Montecillo"
                            value="#{student.lastName}"
                            required="true"
                            validator="#{alphaValidator.validateAlpha}">
+                  <f:validateLength minimum="3" maximum="30"/>
               </h:inputText>
               <h:outputLabel for="email" value="Email:">
               </h:outputLabel>
               <h:inputText id="email"
                            label="Email"
+                           pt:placeholder="loquesea@loquesea.com"
                            value="#{student.email}">
+                  <f:validateLength minimum="3" maximum="30"/>
+                  <f:validator validatorId="emailValidator" />
               </h:inputText>
               <h:panelGroup></h:panelGroup>
               <h:commandButton action="information" value="Save">
