Configure persistence, add MVC pattern to Student (model: entity Student, StudentBean; view: JSF and controller: StudentController).

--- a/jakartajpa/src/main/webapp/index.xhtml
+++ b/jakartajpa/src/main/webapp/index.xhtml
@@ -10,6 +10,13 @@
     <h:body>
         <h1>Hello from Facelets ITESS-Patzcuaro JPA.</h1>
         
+        <h2> Get student List </h2>
+        <h:form id="studentFormList">
+            <h:commandLink value="Get student list" 
+                           action="#{studentController.getStudents()}" />
+        </h:form>
+        
+        <h2> Add student form: </h2>
         <h:form id="studentForm">
             <h:messages/>
             <h:panelGrid columns="2" columnClasses="rightAlign,leftAlign">
