--- a/jakartajpa/src/main/webapp/index.xhtml
+++ b/jakartajpa/src/main/webapp/index.xhtml
@@ -25,7 +25,7 @@
               <h:inputText id="firstName" 
                            label="First Name"
                            pt:placeholder="Francisco"
-                           value="#{student.firstName}"
+                           value="#{studentController.student.firstName}"
                            required="true"
                            validator="#{alphaValidator.validateAlpha}">
                   <f:validateLength minimum="3" maximum="30"/>
@@ -35,7 +35,7 @@
               <h:inputText id="lastName"
                            label="Last Name"
                            pt:placeholder="Montecillo"
-                           value="#{student.lastName}"
+                           value="#{studentController.student.lastName}"
                            required="true"
                            validator="#{alphaValidator.validateAlpha}">
                   <f:validateLength minimum="3" maximum="30"/>
@@ -45,12 +45,12 @@
               <h:inputText id="email"
                            label="Email"
                            pt:placeholder="loquesea@loquesea.com"
-                           value="#{student.email}">
+                           value="#{studentController.student.email}">
                   <f:validateLength minimum="3" maximum="30"/>
                   <f:validator validatorId="emailValidator" />
               </h:inputText>
               <h:panelGroup></h:panelGroup>
-              <h:commandButton action="information" value="Save">
+              <h:commandButton action="#{studentController.saveStudent()}" value="Save">
               </h:commandButton>
             </h:panelGrid>
           </h:form>
