--- a/jakartahello-aglara/src/main/webapp/index.xhtml
+++ b/jakartahello-aglara/src/main/webapp/index.xhtml
@@ -106,7 +106,8 @@
                 </div>
                 <div class="mb-3 d-grid gap-2">
                     <h:panelGroup></h:panelGroup>
-                    <h:commandButton class="btn btn-primary " action="information" value="Save">
+                    <h:commandButton class="btn btn-primary " 
+                                     action="studentController.saveStudent()" value="Save">
                     </h:commandButton>
                 </div>
 
